[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Main/ScoreLabel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Main/MainScene.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	float r, g, b, a;
	if(UV.x < UV.y) {
		r = (1.0 - UV.y) * 0.2 + 0.1;
		b = (1.0 - UV.y) * 0.2 + 0.1;
	} else {
		r = (1.0 - UV.x) * 0.2 + 0.1;
		b = (1.0 - UV.x) * 0.2 + 0.1;
	}
	g = 0.0;
	a = 1.0;
	
	COLOR = vec4(r, g, b, a);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="MainScene" type="Node2D"]
position = Vector2( 0, 2 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 80.0
margin_top = -8.52396
margin_right = 120.0
margin_bottom = 5.47604
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PI/2
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = -4.0
margin_top = -90.0
margin_right = 36.0
margin_bottom = -76.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
visible = false
margin_left = -90.0
margin_top = -8.0
margin_right = -50.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3PI/2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
visible = false
margin_left = -6.44883
margin_top = 82.0957
margin_right = 33.5512
margin_bottom = 96.0957
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
visible = false
margin_left = -775.339
margin_top = -545.482
margin_right = -560.339
margin_bottom = -523.482
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Theta labels are for THETA_CALC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
material = SubResource( 2 )
margin_left = -800.0
margin_top = -800.0
margin_right = 800.0
margin_bottom = 800.0
color = Color( 0.262745, 0, 0.498039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="RichTextLabel" parent="Camera2D"]
margin_left = 360.0
margin_top = -293.0
margin_right = 499.0
margin_bottom = -253.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
